--- a/pages/news-and-reports.html
+++ b/pages/news-and-reports.html
@@ -301,7 +301,7 @@
                             </div>
                             <p class="Action_title">Начинаем приём заявок на акцию – «Портфель доброты».💼💞</p>
                             <div style="bottom: 36px; left: 32px; position: absolute; z-index: 20;">
-                                <div class=""><a href="https://vk.com/bfpodaripodarok?w=wall-621396_1713" target="_blank"
+                                <div class=""><a href="./news.html" target="_blank"
                                     class="Icon_iconButtonRoot Icon_textButton " style="display: flex;">подробнее<svg
                                         xmlns="http://www.w3.org/2000/svg" width="28px" height="28px" fill="none" viewBox="0 0 40 40"
                                         class="Icon_iconAsset">
