change family account

--- a/pages/account/account.html
+++ b/pages/account/account.html
@@ -257,12 +257,12 @@
             href="../donate.html">
             <div class="Mobile_helpBtnContent">помочь</div>
         </a>
-        <div class="Page_root Page_white ">
+        <div class="Page_root">
             <div class="Default_defaultContainer Account_container"
                 style="height: unset;  position: relative; background-color: #e4e8eb;">
                 <div class="GiverAccount_root Account_root">
                     <div class="Account_main">
-                        <div class="Account_controls">
+                        <div class="Account_controls Account_header">
                             <button aria-disabled="false"
                             class="Account_control _active"><svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0.796763 8.72388H6.24148L6.12147 15.7996H0.796763V8.72388Z" fill="black"/>
@@ -288,7 +288,7 @@
                             
                             <div class="Account_controlText">Избранные семьи</div>
                         </button></div>
-                        <div class="Account_gifts Gifts">
+                        <div class="Account_body Gifts">
                             <div class="Gifts_giftCard Gift">
                                 <div class="Gift_top">
                                     <div class="Gift_code">7-ВРН-ПД22 Воронеж</div>
